--- a/index.html
+++ b/index.html
@@ -18,14 +18,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="nav  ">
-				<div class="container nav1 ">
-					<!-- <nav class="navbar navbar-light " >
-						<a class="navbar-brand" href="#">
-							<img src="img/logo.png" width="150" height="30" alt="">
-						</a>
-					</nav> -->
-					<nav class="navbar navbar-expand-sm navbar-light ">
+			<div class="nav1 ">
+				<div class="container  ">
+					<nav class="navbar navbar-expand-sm navbar-light  d-flex justify-content-around">
 						<nav class="navbar navbar-light ">
 							<a class="navbar-brand" href="#">
 								<img src="img/logo.png" width="150" height="30" alt="">
@@ -252,9 +247,9 @@
 			</div>
 		</div>
 		<div class="six_area mt-3">
-			<div class="img w-100 pl-5 pt-5" 
-			style="height:900px; background-image: url(img/index_develop_bg1.jpg); background-size:contain; background-repeat:no-repeat;">
-				<h3 class="mb-3 ml-5 mt-5">连接<br>人才与发展</h3>
+			<div class="img w-100 pl-5 pt-5" >
+				<img src="./img/index_develop_bg1.jpg" alt="" class="h-100 w-100">
+				<h3 class="">连接<br>人才与发展</h3>
 				<p class="ml-5 text-secondary">激发活力，助力成长</p>
 			</div>
 		</div>
