--- a/index2.html
+++ b/index2.html
@@ -2,76 +2,85 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-			crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" >
 		<link rel="stylesheet" href="css/new_file.css">
+		<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 		<!-- <link rel="stylesheet" href="css/index.css"> -->
 		<title></title>
 	</head>
 	<body>
 		<div class="top_box ">
-			<div class="swiper" style="height:700px;">
-				<img class="bg h-100" src="./img/bg_top.jpg" width="100%" alt="背景图">
+			<div  style="height:700px;">
+				<img class="bg-top h-100 " src="./img/bg_top.jpg" width="100%" alt="背景图">
 				<div class="menban">
 					<div class="container ">
-						<div >
-							<div class="xuanyan d-flex  text-white flex-column justify-content-center align-items-start">
-								<h2 class="text2 ">精品展 # 成长在腾讯</h2>
-								<p class="text3">在腾讯视角新的系列文章里，一起遇见不断推动创新，身体力行“用户为本，科技向善”的杰出腾讯团队成员</p>
-							</div>
+						<div class="xuanyan d-flex  text-white flex-column justify-content-center align-items-start">
+							<h2 class="text2 ">精品展 # 成长在腾讯</h2>
+							<p class="text3">在腾讯视角新的系列文章里，一起遇见不断推动创新，身体力行“用户为本，科技向善”的杰出腾讯团队成员</p>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="nav container d-inline-flex align-content-start">
-				<nav class="navbar navbar-light ">
-					<a class="navbar-brand" href="#">
-						<img src="img/logo.png" width="150" height="30" alt="">
-					</a>
-				</nav>
-				<nav class="navbar navbar-expand-sm navbar-light ">
-					<div class="collapse navbar-collapse" id="navbarNav">
-						<ul class="navbar-nav ">
-							<li class="nav-item active">
-								<a class="nav-link text-white" href="#">简介</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link text-white" href="#">业务</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link text-white" href="#">员工</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link text-white" href="#">企业责任</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link text-white" href="#">投资者</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link text-white" href="#">媒体</a>
-							</li>
-							<li class="nav-item active">
-								<span class="nav-link text-white disabled" href="#" tabindex="-1"
-									aria-disabled="true">简</span>
-							</li>
-							<li class="nav-item active">
-								<span class="nav-link text-white disabled" href="#" tabindex="-1"
-									aria-disabled="true">繁</span>
-							</li>
-							<li class="nav-item active">
-								<span class="nav-link text-white disabled" href="#" tabindex="-1"
-									aria-disabled="true">EN</span>
-							</li>
-						</ul>
-					</div>
-				</nav>
-			</div>
+			
+			<nav class="navbar navbar-expand-lg navbar-light nav-one container d-flex">
+				<a class="navbar-brand" href="#">
+					<img src="../tengxun/img/logo.png" width="100" height="30" alt="">
+				</a>
+				<button class="navbar-toggler " type="button" data-toggle="collapse"
+					data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
+					<ul class="navbar-nav ml-auto ">
+						<!-- <span class="sr-only">(current)</span> -->
+						
+						<li class="nav-item active ">
+							<a class="nav-link text-white" href="#">简介 </a>
+						</li>
+						<li class="nav-item active ml-4">
+							<a class="nav-link text-white" href="#">业务 </a>
+						</li>
+						<li class="nav-item active ml-4">
+							<a class="nav-link text-white" href="#">员工 </a>
+						</li>
+						<li class="nav-item active ml-4">
+							<a class="nav-link text-white" href="#">投资者</a>
+						</li>
+						<li class="nav-item active ml-4">
+							<a class="nav-link text-white" href="#">媒体</a>
+						</li>
+						<li class="nav-item disabled ml-4">
+							<a class="nav-link text-white-50" href="#">简</a>
+						</li>
+						<li class="nav-item disabled ml-4">
+							<a class="nav-link text-white-50" href="#">繁</a>
+						</li>
+						<li class="nav-item disabled ml-4">
+							<a class="nav-link text-white-50" href="#">EN</a>
+						</li>
+						<!-- <li class="nav-item dropdown disabled ">
+							<a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+								data-toggle="dropdown" aria-expanded="false">
+								字体
+							</a>
+							<div class="dropdown-menu ml-xl-0 " aria-labelledby="navbarDropdown">
+								<a class="dropdown-item text-white" href="#">简</a>
+								<a class="dropdown-item text-white" href="#">繁</a>
+								<div class="dropdown-divider text-white"></div>
+								<a class="dropdown-item text-white" href="#">EN</a>
+							</div>
+						</li> -->
+					</ul>
+				</div>
+			</nav>
 		</div>
 		<div class="two_area" style="background-color: #f0f4fd;">
 			<div class="container two border-top">
 				<h4 class="text-white  font-itailc pt-3 pb-2">最新动态</h4>
 				<div class="row part1 mb-4">
-					<div class="col-8 area_left" style="height:560px;">
+					<div class="col-lg-8 area_left col-sm-12" style="height:560px;">
 						<div class="img1" style="height:60%; overflow: hidden;">
 							<img class="" src="img/area_one1.jpg" alt="" style="width: 100%;">
 						</div>
@@ -80,7 +89,7 @@
 							<p>在腾讯研究院"腾讯对话"科技世界观系列的最新一期，就可持续发展、能源效率和碳中和之路等议题展开交流和讨论</p>
 						</div>
 					</div>
-					<div class="col-4 area_right ">
+					<div class="col-lg-4 area_right col-sm-12">
 						<div class="area_right1 bg-primary h-100 ">
 							<img src="img/area_one2.png" alt="" class="w-100">
 							<div class=" text-white pt-5 pb-5 pl-3 pr-3">
@@ -95,7 +104,7 @@
 					</div>
 				</div>
 				<div class="row part2 mb-4">
-					<div class="col-4 ">
+					<div class="col-lg-4 col-sm-6">
 						<div class="Ltwo bg-primary h-100">
 							<img class="img_two w-100" src="img/area_two1.jpg" alt="">
 							<div class="textbox text-white pt-5 pb-5 pl-3 pr-3">
@@ -104,7 +113,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-4 ">
+					<div class="col-lg-4 col-sm-6 ">
 						<div class="Rtwo  bg-white h-100 ">
 							<img class="img_two w-100" src="img/area_two2.jpg" alt="">
 							<div class="textbox text-black pt-5 pb-5 pl-3 pr-3">
@@ -113,7 +122,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-4">
+					<div class="col-lg-4 d-md-none d-lg-block ">
 						<div class="Ctwo h-100 ">
 							<img class="img_two w-100" src="img/area_two2.jpg" alt="">
 							<div class="textbox pt-5 pb-5 pl-3 pr-3">
@@ -124,7 +133,7 @@
 					</div>
 				</div>
 				<div class="row part3 mb-4">
-					<div class="col-8">
+					<div class="col-lg-8 col-sm-12">
 						<div class="area_left3 bg-white " style="height: 650px;">
 							<div class=""  style="height:65%; overflow: hidden;">
 								<img class="w-100 " src="img/area_three1.jpg" alt="">
@@ -135,7 +144,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-4">
+					<div class="col-lg-4 col-sm-12">
 						<div class="right3 bg-primary h-100">
 							<img src="img/area_three2.jpg" alt="" style="width: 100%;">
 							<div class="textbox  text-white pt-5 pb-5 pl-3 pr-3">
@@ -148,7 +157,7 @@
 					</div>
 				</div>
 				<div class="row part4 mb-4">
-					<div class="col-8">
+					<div class="col-lg-8 col-sm-12">
 						<div class="area_left3 w-100  "
 						 style="background-image: url(img/area_four1.png);background-size: cover; height: 250px;">
 							<div class="yinying">
@@ -159,7 +168,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-4">
+					<div class="col-lg-4 col-sm-12">
 						<div class="right4  d-flex align-items-center " 
 						style="background-image: url(img/area_four2.png);background-size: cover; height:250px">
 							<div class="textbox text-white ml-4">
@@ -173,19 +182,19 @@
 		<div class="three_area mt-4  mb-4">
 			<div class="container">
 				<div class="row">
-					<div class="col-4 text-white h-100">
+					<div class="col-lg-4 col-sm-6 text-white h-100">
 						<div class="three w-100 d-flex justify-content-center align-items-center"
 							style="background: url(img/index_detail_1.jpg);">
 							<h4>公司简介</h4>
 						</div>
 					</div>
-					<div class="col-4 text-white ">
+					<div class="col-lg-4 col-sm-6 text-white ">
 						<div class="three w-100 h-100 d-flex justify-content-center align-items-center"
 							style="background: url(img/index_detail_2.jpg);">
 							<h4>企业文化</h4>
 						</div>
 					</div>
-					<div class="col-4  text-white ">
+					<div class="col-lg-4 col-sm-6 text-white ">
 						<div class="three w-100 h-100 d-flex justify-content-center align-items-center"
 							style="background: url(img/index_detail_3.jpg);">
 							<h4>办公地点</h4>
@@ -197,7 +206,7 @@
 		<div class="four_area h-100 mb-4">
 			<div class="container">
 				<div class="row">
-					<div class="col-4  d-flex flex-wrap align-content-center ">
+					<div class="col-lg-4  d-flex flex-wrap  d-md-none d-lg-block " style="margin: auto;">
 						<div class=" text-white pl-3 " style="border-left:3px solid #194ac3;">
 							<h3 class="text3_title">连接用户与生活</h3>
 							<span class="text3_WB">让生活更快捷更多彩</span>
@@ -212,7 +221,7 @@
 						</div>
 
 					</div>
-					<div class="col-8 ">
+					<div class="col-lg-8 col-sm-12">
 						<div class="d-flex flex-wrap text-white  " style="height:310px">
 							<div class="p-2 w-50 h-100 d-flex flex-wrap align-content-end"
 								style="background-image: url(img/index_link_1_1.jpg);">
@@ -240,10 +249,10 @@
 		<div class="five_area mt-3">
 			<div class="container">
 				<div class="row">
-					<div class="col-6 w-100 text-white pl-5 pb-5 d-flex flex-wrap align-content-end five1"
+					<div class="col-lg-6 col-sm-12 w-100 text-white pl-5 pb-5 d-flex flex-wrap align-content-end five1"
 						style="height:500px; background-size: contain; background-image: url(img/index_resp_bg3.jpg);">
 						<h5>腾讯为村</h5>
-						<p>根据乡村使用场景定制微信公众号，形成由村、乡镇、区县、州<br>市组成的公众号集群服务村名，打造手机上的“为村服务中心”。</p>
+						<p class="text-wrap">根据乡村使用场景定制微信公众号，形成由村、乡镇、区县、州市组成的公众号集群服务村名，打造手机上的“为村服务中心”。</p>
 					</div>
 					<div class="col-6 d-flex flex-column mb-3 justify-content-center">
 						<h3 class="mb-3">连接<br>责任与信任</h3>
@@ -252,12 +261,14 @@
 				</div>
 			</div>
 		</div>
-		<div class="img w-100 mt-4 pt-5 pl-4"
-			style="height:975px; background-image: url(img/index_develop_bg1.jpg); background-size:contain; background-repeat:no-repeat;">
-			<h3 class="pt-5 pl-5 ml-5 mt-5">连接<br>人才与发展</h3>
-			<p class=" pl-5 ml-5 text-secondary">激发活力，助力成长</p>
+		<div class="img1 w-100 mt-4 pt-5 pl-4" style=" position: relative;">
+			<img src="img/index_develop_bg1.jpg" alt="" class="h-100 w-100">
+			<span class="text_six">
+			<h3 class=" ">连接<br>人才与发展</h3>
+			<p class=" text-secondary">激发活力，助力成长</p>
+			</span>
 		</div>
-		<div class="buttom_logo ">
+		<div class="buttom_logo">
 			<div class="container ">
 				<div class="logo border-bottom">
 					<div class="logo_top d-inline-flex p-3 ">
