--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
 		</div>
 		<div class="position">
 			<div class="two_area" style="background-color: #f0f4fd;">
-				<div class="container border-top">
+				<div class="container two border-top">
 					<h4 class="text-white  font-itailc pt-3 pb-2">最新动态</h4>
 					<div class="row part1 ">
 						<div class="col-lg-8 area_left col-sm-12 mb-sm-4" style="height:560px;">
